# Parallels

./: .gitignore  README.md
lesson1/: CMakeLists.txt  main  main.cpp
task2/: CMakeLists.txt  for.cpp  for.hpp  graph.py  integration.cpp  integration_show.py  matrix.cpp  matrix_show.py  result_integration.txt  result_matrix.txt  results.tex  show.py  sole_for.cpp
task2/data/: integration_result.txt  matrix_result.txt  sole_result.txt
task2/lib/: for.cpp  for.hpp
task3/: CMakeLists.txt
task3/lib/: client.hpp  server.hpp
task3/results/: matrix.txt  pow.txt  sin.txt  sqrt.txt
task3/src/: main.cpp  main2.cpp  matrix.cpp  show_matrix.py  test.py  thread_pool.cpp
task4/: main.py
task6/: CMakeLists.txt  main  main.cpp  makefile  report10.nsys-rep  report11.nsys-rep  report1_2.nsys-rep  report2_2.nsys-rep  report3_2.nsys-rep  res.txt  visual.py  Задание 6.odt
task6/src/: main.cpp
task7/: CMakeLists.txt  main  main.cpp  makefile  report_cublas.nsys-rep  res_128.txt  Задание 7.odt
task8/: CMakeLists.txt  main.cpp  profile.nsys-rep  Задание 8.odt
